--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,27 +1,30 @@
 .main {
   background-color: $main-bg;
   padding: 5em 2em;
+  @include tablet {
+    padding: 99px 12em;
+  }
   @include desktop {
-    padding: 8em;
+    padding: 169px 8em;
     display: flex;
     flex-direction: row-reverse;
   }
+
   &__image {
     position: relative;
-    background-image: url("troll.jpg");
+    background-image: url("/images/image-header-mobile.jpg");
     background-size: cover;
     min-height: 35vh;
     width: 100%;
     border-radius: 12px 12px 0px 0px;
     @include tablet {
-      min-height: 50vh;
+      min-height: 30vh;
     }
     @include desktop {
       border-radius: 0 12px 12px 0;
-      background-image: url("troll.jps");
+      background-image: url("/images/image-header-desktop.jpg");
       background-size: cover;
       width: 100%;
-      min-height: 0vh;
       height: 600px;
     }
     &::before {
@@ -57,8 +60,11 @@
     text-align: start;
     padding: 5em 5em;
     // max-height: 50vh;
-    height: 450px;
+    min-height: 450px;
     width: 65%;
+  }
+  @include tablet {
+    max-height: 369px;
   }
   &__desc {
     padding: 1em 0;
